  before GCC 11.1 on i686. Silence GCC note on newer versions.
  (Antonin Décimo, review by Sadiq Jaffer)

- #13574, #13594: Generational scanning of stack frames for ARM 64 bits, POWER,
  and RISC-V.  This reduces minor GC work in the presence of deep call stacks.
  (Xavier Leroy, review by Miod Vallat, Gabriel Scherer and Olivier Nicole)

### Code generation and optimizations:

### Standard library:

- #13728: Add Sys.runtime_executable containing the full path (if available) to
  the currently executing runtime.
  (David Allsopp, review by Nicolás Ojeda Bär and Daniel Bünzli)

- #13916: Add Option.product and Option.Syntax.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer and David
  Allsopp)

- #13995: Add Option.blend.
  (Kate Deplaix, review by Daniel Bünzli, Gabriel Scherer,
   Nicolás Ojeda Bär, Florian Angeletti and Josh Berdine)

- #14086: Add Domain.count.
  (Nicolás Ojeda Bär, review by David Allsopp, Gabriel Scherer, Daniel Bünzli
  and KC Sivaramakrishnan)

- #13920: add Option.{for_all, exists}
  (Gabriel Scherer, review by Kate Deplaix, Nicolás Ojeda Bär, Richard Eisenberg
  and Jeremy Yallop)

- #12877: Dynarray.rev_iter, Dynarray.rev_iteri
  (Gabriel Scherer, review by Léo Andrès, Jeremy Yallop and Nicolás Ojeda Bär)

### Type system:

- #13781: Set scope of internal type nodes during abbreviation expansion
  rather than recursing during unification.
  (Jacques Garrigue, review by Gabriel Scherer)

* #13830: fail rather than silently create abstract module types when avoiding
  (i.e. hiding) signature items, as in:
  ```ocaml
    module N = struct
      open (struct type t = A | B end)
      module type T = sig type u = t * int end
    end
  ```
  Before, it was succeeding with `module N : sig module type T end`, now it
  fails. Similarly for anonymous functor calls (of the form `F(struct ... end))
  (Clement Blaudeau, review by Gabriel Scherer)

* #14066: catch invalid aliases introduced by signature constraints during